syntax = "proto2";

package protocol;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    required string name = 1;
}

message HelloReply {
    required string message = 1;
}
